# computer-graphics-engine

./: .gitignore  CMakeLists.txt  Color.h  Line2D.cpp  Line2D.h  Point2D.h  README.md  easy_image.cc  easy_image.h  engine.cc  l_parser.cc  l_parser.h
ini_files/: Intro2_Blocks.ini  Intro3_lines_diamond.ini  Intro3_lines_quartercircle.ini  out.txt
ini_files/3d_fractals/: 3d_fractals001.ini  3d_fractals002.ini  3d_fractals003.ini  3d_fractals004.ini  3d_fractals005.ini  3d_fractals006.ini  3d_fractals007.ini  3d_fractals008.ini  3d_fractals009.ini  3d_fractals010.ini  3d_fractals011.ini  3d_fractals012.ini  3d_fractals013.ini  3d_fractals014.ini  3d_fractals015.ini  3d_fractals016.ini  3d_fractals017.ini  3d_fractals018.ini  3d_fractals019.ini  3d_fractals020.ini  3d_fractals021.ini  3d_fractals022.ini  3d_fractals023.ini  3d_fractals024.ini  3d_fractals025.ini  3d_fractals026.ini  3d_fractals027.ini  3d_fractals028.ini  3d_fractals029.ini  3d_fractals030.ini  3d_fractals031.ini  3d_fractals032.ini  3d_fractals033.ini  3d_fractals034.ini  3d_fractals035.ini  3d_fractals036.ini  3d_fractals037.ini  3d_fractals038.ini  3d_fractals039.ini  3d_fractals040.ini  (+139 more)
ini_files/ambient/: ambient_light001.ini  ambient_light002.ini  ambient_light003.ini  ambient_light004.ini  ambient_light005.ini  ambient_light006.ini  ambient_light007.ini  ambient_light008.ini  ambient_light009.ini  ambient_light010.ini  ambient_light011.ini  ambient_light012.ini  ambient_light013.ini  ambient_light014.ini  ambient_light015.ini  ambient_light016.ini  ambient_light017.ini  ambient_light018.ini  ambient_light019.ini  ambient_light020.ini  ambient_light021.ini  ambient_light022.ini  ambient_light023.ini  ambient_light024.ini  ambient_light025.ini  ambient_light026.ini  ambient_light027.ini  ambient_light028.ini  ambient_light029.ini  ambient_light030.ini  ambient_light031.ini  ambient_light032.ini  ambient_light033.ini  ambient_light034.ini  ambient_light035.ini  ambient_light036.ini  ambient_light037.ini  ambient_light038.ini  ambient_light039.ini  ambient_light040.ini  (+96 more)
ini_files/clipping/: clipping001.ini  clipping002.ini  clipping003.ini  clipping004.ini  clipping005.ini  clipping006.ini  clipping007.ini  clipping008.ini  clipping009.ini  clipping010.ini  clipping011.ini  clipping012.ini  clipping013.ini  clipping014.ini  clipping015.ini  clipping016.ini  clipping017.ini  clipping018.ini  clipping019.ini  clipping020.ini  clipping021.ini  clipping022.ini  clipping023.ini  clipping024.ini  clipping025.ini  clipping026.ini  clipping027.ini  clipping028.ini  clipping029.ini  clipping030.ini  clipping031.ini  clipping032.ini  clipping033.ini  clipping034.ini  clipping035.ini  clipping036.ini  clipping037.ini  clipping038.ini  clipping039.ini  clipping040.ini  (+5 more)
ini_files/diffuse/: diffuse_light001.ini  diffuse_light005.ini  diffuse_light006.ini  diffuse_light008.ini  diffuse_light009.ini  diffuse_light014.ini  diffuse_light015.ini  diffuse_light019.ini  diffuse_light023.ini  diffuse_light024.ini  diffuse_light025.ini  diffuse_light026.ini  diffuse_light027.ini  diffuse_light028.ini  diffuse_light030.ini  diffuse_light034.ini  diffuse_light037.ini  diffuse_light041.ini  diffuse_light042.ini  diffuse_light043.ini  diffuse_light046.ini  diffuse_light047.ini  diffuse_light054.ini  diffuse_light056.ini  diffuse_light057.ini  diffuse_light058.ini  diffuse_light060.ini  diffuse_light061.ini  diffuse_light062.ini  diffuse_light065.ini  diffuse_light069.ini  diffuse_light071.ini  diffuse_light076.ini  diffuse_light077.ini  diffuse_light078.ini  (+703 more)
s0205440/: CMakeLists.txt  Color.cpp  Color.h  Face.cpp  Figure.h  LSystem2D.cpp  LSystem2D.h  Platonic.h  README.md  Utils.cpp  easy_image.h  engine.cc  l_parser.cc  l_parser.h  vector3d.cc
src/: Book.cpp  Book.h  CMakeLists.txt  Color.h  Control.cpp  Control.h  DesignByContract.h  Face.h  Figure.cpp  Figure.h  LSystem2D.cpp  LSystem2D.h  LSystem3D.cpp  LSystem3D.h  Light.cpp  Light.h  Line2D.cpp  Line2D.h  Platonic.cpp  Platonic.h  Point2D.cpp  Point2D.h  README.md  Utils.cpp  Utils.h  ZBuffer.cpp  ZBuffer.h  easy_image.cc  easy_image.h  engine.cc  l_parser.cc  script.sh  vector3d.h
(+1037 files in other folders)
